objects/SGR_Renewal_Batch_Oppty__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SGR_Renewal_Batch_Opptys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BatchId</label>
        <referenceTo>SGRRenewalBatch__c</referenceTo>
        <relationshipName>SGR_Renewal_Batch_Opptys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SGR_Renewal_Batch_Opptys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intiated Rating</fullName>
                </value>
                <value>
                    <fullName>Intiated Validation</fullName>
                </value>
                <value>
                    <fullName>Opportunity created</fullName>
                </value>
                <value>
                    <fullName>Rated</fullName>
                </value>
                <value>
                    <fullName>Renewal Document Generated</fullName>
                </value>
                <value>
                    <fullName>Send for Email Dsitrubution</fullName>
                </value>
                <value>
                    <fullName>Send for Postal Distribution</fullName>
                </value>
                <value>
                    <fullName>Send to Documnet Generaion</fullName>
                </value>
                <value>
                    <fullName>Transferred to Bluestar</fullName>
                </value>
                <value>
                    <fullName>Triggered</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Bluestar transfer initiated</fullName>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Renewal Batch Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Processing_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SGR_Renewal Batch Oppty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Batch Opportunities</pluralLabel>
    <recordTypes>
        <fullName>SGRRenewal_Batch_Oppty</fullName>
        <active>true</active>
        <label>SGRRenewal Batch Oppty</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SGR_Rated_Status_change</fullName>
        <active>false</active>
        <description>This validation is used to check for workflow status change.</description>
        <errorConditionFormula>AND(ISPICKVAL(00N4D000000sCMl.00N4D000000s7D5,&quot;Down&quot;) ,$RecordType.Id =&quot;0124D0000004bjN&quot;,ISPICKVAL( Opportunity__r.SGR_Workflow_Status__c, &quot;Rated&quot;))</errorConditionFormula>
        <errorMessage>You cannot change the workflow status when gate is down on an opportunity</errorMessage>
    </validationRules>
</CustomObject>